# league-advisor-api

./: .env.sample  README.md  conf.py  docker-compose.yml  heroku.yml  index.rst  manage.py  pyproject.toml  requirements.txt
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/docs/: accounts.doctree  accounts.migrations.doctree  champions.doctree  champions.management.commands.doctree  champions.management.doctree  champions.migrations.doctree  conf.doctree  items.doctree  items.migrations.doctree  league_advisor_api.doctree  manage.doctree  modules.doctree  patch_notes.doctree  ranked.doctree  solo_champion.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_sources/: index.rst.txt
_build/html/docs/: accounts.html  accounts.migrations.html  champions.html  champions.management.html  (+11 more)
accounts/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_account_password.py  0003_alter_account_summoner_level.py  0004_alter_account_summoner_champion_mastery_and_more.py  0005_alter_account_summoner_champion_mastery_and_more.py
champions/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
champions/migrations/: 0001_initial.py  0002_remove_champion_creator.py
docs/: accounts.rst  conf.py  items.migrations.rst  items.rst  modules.rst  solo_champion.rst
items/: models.py  tests.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_remove_item_id_alter_item_gold_alter_item_item_id.py
league_advisor_api/: asgi.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
patch_notes/: tests.py  urls.py  views.py
patch_notes/scraper/: patch.html
ranked/: tests.py  urls.py  views.py
ranked/scraper/: filtered_data.json
solo_champion/: apps.py  test.py  tests.py  urls.py  views.py
solo_champion/scraper/: html.html  string_file.txt
static/: champion_mastery.json  champions_data.json  items.json  items.py  items_data.json  match_data_analysis.csv  match_history.json  versions.json
(+9 files in other folders)
