[tool.poetry]
name = "league-advisor-api"
version = "0.1.0"
description = ""
authors = ["bashar adel taamneh <bashartaamneh55@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.12.4"
Django = "^4.0"
cors = "^1.0.1"
black = "^21.12b0"
flake8 = "^4.0.1"
pytz = "^2021.3"
bs4 = "^0.0.1"
requests = "^2.26.0"
pandas = "^1.3.4"
cdifflib = "^1.2.5"
collections-extended = "^2.0.0"
django-nose = "^1.4.7"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
