[tool.poetry]
name = "api_test"
version = "0.1.0"
description = ""
authors = ["bashar adel taamneh <bashartaamneh55@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
djangorestframework = "^3.12.4"
pytz = "^2021.3"
bs4 = "^0.0.1"
requests = "^2.26.0"
DateTime = "^4.3"
PyJWT = "^2.3.0"
django-cors-headers = "^3.10.1"
django-environ = "^0.8.1"
djangorestframework-simplejwt = "^5.0.0"
whitenoise = "^5.3.0"
sqlparse = "^0.4.2"
psycopg2-binary = "^2.9.2"
asgiref = "^3.4.1"
gunicorn = "^20.1.0"
django-nose = "^1.4.7"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pandas = "^1.3.4"
cdifflib = "^1.2.5"
collections-extended = "^2.0.0"
django-nose = "^1.4.7"
coverage = "^6.2"
Sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
